add redux structure

--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 REACT_APP_GOOGLE_CLIENT_ID=1039227457770-a78m8elu2nue9k5662gpo5bsr9ak8th3.apps.googleusercontent.com
 SECRET_KEY=grMuMCFfJ_Hl2pJaSmlnaFFn
+SKIP_PREFLIGHT_CHECK=true
