--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "date-fns": "^2.21.3",
     "moment": "^2.29.1",
     "react": "^17.0.2",
+    "react-chartjs-2": "^3.0.3",
     "react-charts": "^2.0.0-beta.7",
     "react-dom": "^17.0.2",
     "react-google-login": "^5.2.2",
@@ -25,6 +26,7 @@
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-vis": "^1.11.7",
     "redux": "^4.1.0",
     "redux-logger": "^3.0.6",
     "redux-saga": "^1.1.3",
