--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-scripts": "4.0.3",
     "react-vis": "^1.11.7",
     "redux": "^4.1.0",
+    "redux-devtools-extension": "^2.13.9",
     "redux-logger": "^3.0.6",
     "redux-saga": "^1.1.3",
     "redux-thunk": "^2.3.0",
